--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "netlify-cms-app": "^2.14.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0"
   }
 }
